add under25 strat

--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -234,7 +234,7 @@
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
-        <li style="display: inline-block; margin-right: 10px;">
+        <!-- <li style="display: inline-block; margin-right: 10px;">
           <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Scored Both Halves')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Score
@@ -265,15 +265,15 @@
               Concede Both Halves</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
-        </li>
-        <li style="display: inline-block; margin-right: 10px;">
+        </li> -->
+        <!-- <li style="display: inline-block; margin-right: 10px;">
           <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Win Both Halves')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Win Both Halves</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
-        </li>
+        </li> -->
         <li style="display: inline-block; margin-right: 10px;">
           <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Win && +2.5 Goals')"
