--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Kelly - Over 2.5</a>
             </div>
           </div>
+          <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Under25-Kelly.html">
+              <a
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Kelly - Under 2.5</a>
+            </div>
+          </div>
           <!-- <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Draws-Hunter.html">
               <a
